# snow-shot

./: .gitattributes  .gitignore  .lintstagedrc.js  .lintstagedrc.json  README.md  app-icon.psd  biome.json  commitlint.config.js  eslint.config.mjs  package.json  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
.github/workflows/: release.yml
docs/: development.md  git-setup-guide.md  git-workflow.md
public/scripts/: excalidraw.js  excalidraw.offline.js  markdownItFix.js
src/: App.tsx  global.d.ts  routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.fixedRuntime.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  webview2.x64.json
src-tauri/.cargo/: config.toml
src-tauri/build-configs/: installer.nsi
src-tauri/capabilities/: default.json  desktop.json  drag.json  file.json
src-tauri/icons/: icon.icns
src-tauri/infoplist/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: core.rs  file.rs  global_state.rs  hot_load_page.rs  http_services.rs  lib.rs  listen_key.rs  main.rs  ocr.rs  plugin.rs  screenshot.rs  scroll_screenshot.rs  video_record.rs  webview.rs
src-tauri/src-crates/app-os/: Cargo.toml
src-tauri/src-crates/app-utils/: Cargo.toml
src-tauri/src-crates/app-utils/src/: lib.rs  monitor_hdr_info.rs  monitor_info.rs  windows_capture_image.rs
src-tauri/src-crates/http-services/: Cargo.toml
src-tauri/src-crates/http-services/src/: lib.rs  s3.rs
src-tauri/src-crates/plugin-service/: Cargo.toml
src-tauri/src-crates/plugin-service/src/: lib.rs  plugin.rs  plugin_service.rs
src-tauri/src-crates/tauri-commands/http-service/: Cargo.toml  README.md
src-tauri/src-crates/tauri-commands/http-service/src/: lib.rs
src-tauri/src-crates/tauri-commands/screenshot/: Cargo.toml
src-tauri/src-crates/tauri-commands/screenshot/src/: lib.rs
src-tauri/src-crates/webview/: Cargo.toml
src-tauri/src-crates/webview/src/: lib.rs
src-tauri/src-crates/webview/src/macos/: mod.rs
src-tauri/src-crates/webview/src/windows/: mod.rs
src/app/: contextWrap.tsx  extra.tsx  globals.css  layout.tsx  menuLayout.tsx  page.tsx  trayIcon.tsx
src/app/about/: page.tsx
src/commands/: core.ts  file.ts  globalSate.ts  global_state.ts  hotLoadPage.ts  httpServices.ts  index.ts  listenKey.ts  ocr.ts  plugin.ts  screenshot.ts  scrollScreenshot.ts  videoRecord.ts  webview.ts
src/components/: checkEnvironment.tsx  globalEventHandler.tsx  pageNav.tsx  toolbarTip.tsx  trayIconLoader.tsx
src/constants/: appFunction.ts  appSettings.ts  commonKeyEvent.ts  drawToolbarKeyEvent.ts  eventListener.ts  pluginService.ts
src/contexts/: antdContext.tsx  appContext.tsx  appSettingsActionContext.tsx  menuLayoutContext.tsx  pluginServiceContext.tsx  textScaleFactorContext.tsx
src/functions/: fixedContent.ts  fullScreenDraw.ts  ocr.ts  screenshot.ts  sendMessage.ts  tools.ts  videoRecord.ts
src/hooks/: useAppSettingsLoad.tsx  useCallbackAsyncRender.tsx  useCallbackRender.tsx  useHotkeysApp.tsx  usePathname.tsx  usePlatform.tsx  useStatePublisher.tsx  useStateRef.tsx  useStateRender.tsx  useStateSubscriber.tsx  useTempInfo.tsx  useTextScaleFactor.tsx  useWebWorker.tsx
src/messages/: en.ts  map.ts  zhHant.ts
src/types/: appSettings.ts  draw.ts
src/utils/: appConfig.ts  appLog.ts  appSettings.ts  appStore.ts  audio.ts  base64.ts  cache.ts  captureHistory.ts  clipboard.ts  environment.ts  excalidraw.ts  file.ts  format.ts  index.ts  log.ts  mousePosition.ts  platform.ts  random.ts  tweenAnimation.ts  types.ts  webview.ts  window.ts  zIndex.ts
~/.tauri/: myapp.key.pub
(+338 files in other folders)
