[package]
name = "snow-shot-app-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
xcap = { workspace = true }
tauri = { workspace = true }
zune-jpegxl = { workspace = true }
zune-core = { workspace = true }
device_query = { workspace = true }
image = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }
snow-shot-app-shared = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }

[target.'cfg(any(target_os = "macos"))'.dependencies]
scap = { workspace = true }
objc2 = { workspace = true }
core-graphics-helmer-fork = "0.24.0"
macos-accessibility-client = { workspace = true }

[target.'cfg(any(target_os = "windows"))'.dependencies]
windows = { workspace = true, features = ["Win32_UI_Magnification"] }
clipboard-win = "5.4.1"
rayon = { workspace = true }
image = { workspace = true }
widestring = "1.2.0"
windows-capture = "2.0.0-alpha.7"
half = "2.6.0"
webview2-com = "0.38.0"
windows-core = { version = "0.61" }
snow-shot-webview = { workspace = true }