[package]
name = "snow-shot-tauri-commands-screenshot"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { workspace = true }
tauri = { workspace = true }
tokio = { workspace = true }
xcap = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
rayon = { workspace = true }

snow-shot-app-shared = { workspace = true }
snow-shot-app-os = { workspace = true }
snow-shot-app-utils = { workspace = true }

[target.'cfg(any(target_os = "windows"))'.dependencies]
webview2-com = "0.38.0"
windows-core = { version = "0.61" }
windows = { workspace = true }
